[package]
name = "anyrun-hyprland"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun.git" }
abi_stable = "0.11.1"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.160", features = ["derive"] }
ron = "0.8.0"
hyprland = "0.3.2"
